--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Protein-Protein Binding Models"
+title: "Protein Binding Models"
 author: "Jonathan Davies"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-When collecting protein-protein binding data using a technique such as Biolayer Interferometry (BLI) or Surface Plasmon Resonance (SPR), it is useful to simulate binding curves to help optimise your experiments. After initial binding parameters are known, binding cureves can be simulated and paramteters such as: analyte concentration, time of association, dissociation etc. can be varied. The models within this package may also be used to fit a curve to measured binding data using a non-linear regression.
+When collecting protein-ligand binding data using a technique such as Biolayer Interferometry (BLI) or Surface Plasmon Resonance (SPR), it is useful to simulate binding curves to help optimise your experiments. After initial binding parameters are known, binding curves can be simulated and paramteters such as: analyte concentration, time of association, dissociation etc. can be varied. The models within this package may also be used to fit a curve to measured binding data using a non-linear regression.
 
 Currently, two binding models are included with this package:
 
@@ -27,7 +27,7 @@ Currently, two binding models are included with this package:
 ## 1:1 Binding
 
 ```{r, fig.show='hold',fig.height=3.5,fig.width=5,fig.cap = "Example of a 1:1 binding curve."}
-library(ppbm)
+library(pbm)
 time <- seq(0,1000)
 response <- binding1to1(time,500,6e-7,10000,0.01,0.8)
 plot(time, response, type="l")
@@ -39,7 +39,7 @@ plot(time, response, type="l")
 
 
 ```{r, fig.show='hold',fig.height=3.5,fig.width=5,fig.cap = "Example of a 2:1 binding curve."}
-library(ppbm)
+library(pbm)
 time <- seq(0,1000)
 response <- binding2to1(time,500,6e-7,10000,0.01,0.5,2500,0.001,0.3)
 plot(time, response, type="l")
@@ -48,7 +48,7 @@ plot(time, response, type="l")
 ## Non-linear Regression
 
 ```{r, fig.show='hold',fig.height=3.5,fig.width=5,fig.cap = "Example of 2:1 heterogeneous model fit."}
-library(ppbm)
+library(pbm)
 
 # Generate example binding data with noise
 time <- seq(0,1000)
