Pre-release changes

--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -4,7 +4,7 @@ author: "Jonathan Davies"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Protein Binding Models}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
