--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -33,6 +33,14 @@ response <- binding1to1(time,500,6e-7,10000,0.01,0.8)
 plot(time, response, type="l")
 ```
 
+### Optional drift parameter
+
+```{r, fig.show='hold',fig.height=3.5,fig.width=5,fig.cap = "Example of a 1:1 binding curve with baseline drift."}
+library(pbm)
+time <- seq(0,1000)
+response <- binding1to1(time,500,6e-7,10000,0.01,0.8, drift = 1e-04)
+plot(time, response, type="l")
+```
 
 ## 2:1 Binding
 
